--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -55,6 +55,7 @@
 a,
 a:visited,
 a:hover {
-  color: inherit;
-  text-decoration: none;
+  color: inherit !important;
+  text-decoration: none !important;
 }
+
